# wallet-kit

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: library.h  utils.h
include/wallet-kit/: bip32.h  bip39.h  bip44.h  chain_node.h  chain_node_context.h  coin_type.h  crypto_utils.h  cryptography_context.h  english_wordlist.h  extended_key.h  utils.h
include/wallet-kit/bip32/: bip32.h  chain_node.h  chain_node_context.h  extended_key.h  hdw.h  private_key.h  public_key.h
include/wallet-kit/bip44/: coin_type.h
include/wallet-kit/cryptography/: crypto_utils.h  cryptography_context.h  mpc_verify.h
kit/: base58.cpp  base58.h
kit/bip32/: bip32.cpp  bip32.h
kit/bip39/: bip39.cpp  bip39.h  derive_checksum_bits.cpp  derive_checksum_bits.h  generate_entropy.cpp  generate_entropy.h  generate_seedphrase.cpp  generate_seedphrase.h  hex_to_string.cpp  hex_to_string.h  to_binary.cpp  to_binary.h  to_hex.h  wordlist.h
src/: bip32.cpp  bip39.cpp  bip44.cpp  chain_node.cpp  chain_node_context.cpp  crypto_utils.cpp  cryptography_context.cpp  extended_key.cpp  library.cpp  mpc_verify.cpp  utils.cpp
src/bip32/: bip32.cpp  chain_node.cpp  chain_node_context.cpp  extended_key.cpp  hdw.cpp
src/bip39/: bip39.cpp  generate_entropy.cpp  generate_entropy.h  split.h  to_binary.cpp  to_binary.h  to_hex.cpp
src/bip44/: bip44.cpp
src/cryptography/: crypto_utils.cpp  cryptography_context.cpp
test/: bip32_test_vector_1.cpp  bip32_test_vector_2.cpp  bip32_test_vector_3.cpp  bip32_test_vector_4.cpp  bip39_test_vector.cpp  bip44_test_vector.cpp  bip_32_test_vector_4.cpp  recovery_check.cpp  test.cpp
